# dtos/authDTO.go
@@ -1,0 +1,10 @@
+package dtos
+
+type AuthUserDTO struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type AuthUserResponseDTO struct {
+	Token string `json:"token"`
+}
